--- a/src/app/home/foo/foo.component.html
+++ b/src/app/home/foo/foo.component.html
@@ -1,1 +1,42 @@
-<p>foo works!</p>
+<section class="footer">
+
+    <div class="container-fluid-footer">
+        <div class = "row">
+
+        <div class="col-lg-4">
+            <h3>our services</h3>
+            <a href="#"> <i class="bi bi-arrow-right"></i> Health Insurance </a><br>
+            <a href="#"> <i class="bi bi-arrow-right"></i> Term Life Insurance </a><br>
+            <a href="#"> <i class="bi bi-arrow-right"></i> Car Insurance </a><br>
+            <a href="#"> <i class="bi bi-arrow-right"></i> Two Weeler Insurance </a><br>
+            <a href="#"> <i class="bi bi-arrow-right"></i> Home Loan </a><br>
+        </div>
+        <div class="col-lg-4">
+            <h3>contact info</h3>
+            <a href="#"> <i class="fas fa-phone"></i> +91-9110234831 </a><br>
+            <a href="#"> <i class="fas fa-phone"></i> +91-9845315730 </a><br>
+            <a href="#"> <i class="fas fa-envelope"></i> shivani@gmail.com </a><br>
+            <a href="#"> <i class="fas fa-envelope"></i> samya@gmail.com </a><br>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Davangere, india - 400104 </a><br>
+        </div>
+
+        <div class="col-lg-2">
+            <h3>follow us</h3>
+            <a href="#"> <i class="bi bi-facebook"></i> facebook </a><br>
+            <a href="#"> <i class="bi bi-whatsapp"></i> bi-whatsapp </a><br>
+            <a href="#"> <i class="bi bi-instagram"></i> instagram </a><br>
+            <a href="#"> <i class="bi bi-youtube"></i> youtube </a><br>
+            <a href="#"> <i class="bi bi-twitter"></i> bi-twitter </a><br>
+            
+        </div>
+
+    </div>
+    </div>
+    </section>
+    
+
+    
+
+<!-- footer section ends -->
+
+
