--- a/src/app/home/nav/nav.component.html
+++ b/src/app/home/nav/nav.component.html
@@ -8,20 +8,22 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           
           <li class="nav-item">
-            <a class="nav-link"routerLink="" routerLinkActive="active-link">About</a>
+            <a class="nav-link"routerLink="" routerLinkActive="active-link">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="" routerLinkActive="active-link">Contact</a>
+            <a class="nav-link" routerLink="about" routerLinkActive="active-link">About</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link" routerLink = "" routerLinkActive="active-link"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" routerLink="">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="nav-link" routerLink = "" routerLinkActive="active-link">Health Insurance</a></li>
+              <li><a class = "nav-link" routerLink = "" routerLinkActive="active-link">Term Life Insurance</a></li>
+              <li><a class = "nav-link" routerLink = "" routerLinkActive="active-link">Car Insurance</a></li>
+              <li><a class="nav-link" routerLink = "" routerLinkActive="active-link">Two Wheeler Insurance</a></li>
+              <li><a class="nav-link" routerLink = "" routerLinkActive="active-link">House Loan</a></li>
+             
             </ul>
           </li>
           <li class="nav-item">
