--- a/src/app/home/foo/foo.component.css
+++ b/src/app/home/foo/foo.component.css
@@ -1,6 +1,8 @@
 .footer
 {
     overflow: hidden;
+    position: sticky;
+    top: 100%;
     background-color: antiquewhite;
     padding: 20px ,10px;
     text-align: center;
@@ -8,6 +10,7 @@
 
 }
 h1{
+    font-weight: bold;
     color: black;
     font-size: 20px;
 }
@@ -18,12 +21,15 @@ a{
     font-size: 17px;
 
 }
+p{
+    color: aquamarine;
+}
 i {
     color: blue;
     padding: 0px ,10px;
 }
 a.hover {
-    color: aliceblue;
+    color: rgb(112, 164, 209);
 
 }
 
