--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,2 +1,77 @@
 <app-navbar></app-navbar>
+<div class="container my-4 ">
+    <div class="row featurette d-flex justify-content-center align-items-center">
+        <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your
+                    mind.</span></h2>
+            <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose
+                here.</p>
+        </div>
+        <div class="col-md-5 order-md-1">
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/pp1.jpg" alt="">
+           
+        </div>
+    </div>
+
+    <div class="row featurette d-flex justify-content-center align-items-center">
+        <div class="col-md-7 ">
+            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your
+                    mind.</span></h2>
+            <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose
+                here.</p>
+        </div>
+        <div class="col-md-5 ">
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/pp1.jpg" alt="">
+
+        </div>
+    </div>
+
+    <div class="row featurette d-flex justify-content-center align-items-center">
+        <div class="col-md-7 order-md-2 ">
+            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your
+                    mind.</span></h2>
+            <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose
+                here.</p>
+        </div>
+        <div class="col-md-5 order-md-1">
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/pp1.jpg" alt="">
+
+        </div>
+    </div>
+
+</div>
+
+<h1> Reviews</h1>
+
+<div class="container">
+
+    <div class="row">
+        <div class="col-lg-4">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/pp5.jpg"  alt="">
+  
+          <h2>Heading</h2>
+          <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/pp5.jpg"  alt="">
+  
+  
+          <h2>Heading</h2>
+          <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/pp5.jpg"  alt="">
+  
+  
+          <h2>Heading</h2>
+          <p>And lastly this, the third column of representative placeholder content.</p>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div>
+</div>
+
+
+
 <app-footer></app-footer>
