--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -66,13 +66,13 @@
             <h6 class="text-uppercase fw-bold mb-4">
               Contact
             </h6>
-            <p><i class="fas fa-home me-3"></i> Bangalore, KA 577498, IN</p>
+            <p><i class="fas fa-home me-3"></i> Davanagere, India</p>
             <p>
               <i class="fas fa-envelope me-3"></i>
-              contact@DiamondLife.com
+              shivani@gmail.com
             </p>
-            <p><i class="fas fa-phone me-3"></i> + 91 234 567 88</p>
-            <p><i class="fas fa-print me-3"></i> + 91 234 567 89</p>
+            <p><i class="fas fa-phone me-3"></i> + 91 9110234831</p>
+            <p><i class="fas fa-print me-3"></i> + 91 9845315730</p>
           </div>
           <!-- Grid column -->
 
@@ -83,16 +83,16 @@
               CONTACT US
             </h6>
             <p>
-              <a href="#!" class="text-reset"><i class="fab fa-facebook"></i> Facebook</a>
+              <a href="#!" class="text-reset"><i class="bi bi-facebook"></i> Facebook</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="fab fa-instagram"></i> Instagram</a>
+              <a href="#!" class="text-reset"><i class="bi-bi-instagram"></i> Instagram</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="fab fa-twitter"></i> Twitter</a>
+              <a href="#!" class="text-reset"><i class="bi-bi-twitter"></i> Twitter</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="fab fa-linkedin"></i> LinkedIn</a>
+              <a href="#!" class="text-reset"><i class="bi-bi-linkedin"></i> LinkedIn</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -104,8 +104,8 @@
   
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2022 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">TEAM PANDA</a>
+
+      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">TEAM PUSHPA</a>
     </div>
     <!-- Copyright -->
   </footer>
