--- a/src/app/li/li.component.html
+++ b/src/app/li/li.component.html
@@ -1,2 +1,15 @@
 <app-navbar></app-navbar>
+
+<div class="container">
+
+    <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">TERM LIFE INSURANCE</h1>
+        <p class="col-md-8 fs-4">
+            
+        </p>
+        <button class="btn btn-primary btn-lg" type="button">Example button</button>
+      </div>
+
+</div>
+
 <app-footer></app-footer>
