--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,28 @@
 <app-navbar></app-navbar>
-<app-footer></app-footer>
+<br><br><br>
+<div class="container">
+  <form action="SignIn.html">
+      <h1>Login</h1>
+
+      <p>Don't have an account? <a style="text-decoration: none" href="#">Creat Your Account</a> it takes less than a minute</p>
+
+      
+          <!--<label for="name">Name:</label>-->
+          <input type="text" class="form-control" id="name" placeholder="User Name" name="name">
+         
+      
+         <!-- <label for="pwd">Password:</label>-->
+          <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+          <br>
+
+          <a style="text-decoration: none" href="#">Forget password?</a>
+        
+      <br>
+      <br>
+         
+            <input class="form-check-input" type="checkbox" name="remember"> Remember me
+         
+          
+      <button style="float: right;" type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
