--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,2 +1,41 @@
 <app-navbar></app-navbar>
-<app-footer></app-footer>
+<br><br><br>
+<div class="container">
+    <form action="SignIn.html">
+        
+        <h1 >SignUp</h1>
+        
+            <!--<label for="name">Name:</label>-->
+            <input type="text" class="form-control" id="name" placeholder="Enter Name" name="name">
+            
+       
+ 
+           <!-- <label for="email">Email:</label>-->
+            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+        
+     
+          <!--  <label for="number">Phone Number:</label>-->
+            <input type="tel" class="form-control" id="number" placeholder="Enter Phone Number" name="number">
+        
+        
+           <!-- <label for="pwd">Password:</label>-->
+            <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+            <input type="password" class="form-control" id="pwd" placeholder="Confirm password" name="pswd">
+            <br>
+            <button style="float: left;" type="submit" class="btn btn-warning">Reset</button>
+           
+            <button style="float: right;" type="submit" class="btn btn-primary">Submit</button>
+            
+        
+        
+           
+
+           
+            
+        
+    </form>
+</div>
+
+
+
+
