--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
           <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
           <br>
 
-          <a style="text-decoration: none" href="#">Forget password?</a>
+          <a style="text-decoration: none" href="#">Forget Password?</a>
         
       <br>
       <br>
