--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,73 +1,19 @@
-<div class="main_container">
-        <div class="sidebar">
-            <div class="sidebar__inner">
-              <div class="profile">
-                <div class="img">
-                  <img src="https://i.imgur.com/Ctwf8HA.png" alt="profile_pic">
-                </div>
-                <div class="profile_info">
-                   <p>Welcome</p>
-                   <p class="profile_name">Alex John</p>
-                </div>
-              </div>
-              <ul>
-                <li>
-                  <a href="#" class="active">
-                    <span class="icon"><i class="fas fa-dice-d6"></i></span>
-                    <span class="title">Dashboard</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="icon"><i class="fab fa-delicious"></i></span>
-                    <span class="title">Forms</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="icon"><i class="fab fa-elementor"></i></span>
-                    <span class="title">UI Elements</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="icon"><i class="fas fa-chart-pie"></i></span>
-                    <span class="title">Charts</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="icon"><i class="fas fa-border-all"></i></span>
-                    <span class="title">Tables</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-        </div>
-        <div class="container">
-          <div class="item">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab a nesciunt doloribus. Explicabo minus cumque, molestiae tempore repellendus iusto enim maiores pariatur officiis perferendis excepturi, ut dolore laborum eligendi laudantium placeat aspernatur! Quos dolorum unde officiis labore est animi excepturi neque, provident, inventore nobis expedita facilis aspernatur, nihil in atque?
-          </div>
-          <div class="item">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab a nesciunt doloribus. Explicabo minus cumque, molestiae tempore repellendus iusto enim maiores pariatur officiis perferendis excepturi, ut dolore laborum eligendi laudantium placeat aspernatur! Quos dolorum unde officiis labore est animi excepturi neque, provident, inventore nobis expedita facilis aspernatur, nihil in atque?
-          </div>
-          <div class="item">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab a nesciunt doloribus. Explicabo minus cumque, molestiae tempore repellendus iusto enim maiores pariatur officiis perferendis excepturi, ut dolore laborum eligendi laudantium placeat aspernatur! Quos dolorum unde officiis labore est animi excepturi neque, provident, inventore nobis expedita facilis aspernatur, nihil in atque?
-          </div>
-          <div class="item">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab a nesciunt doloribus. Explicabo minus cumque, molestiae tempore repellendus iusto enim maiores pariatur officiis perferendis excepturi, ut dolore laborum eligendi laudantium placeat aspernatur! Quos dolorum unde officiis labore est animi excepturi neque, provident, inventore nobis expedita facilis aspernatur, nihil in atque?
-          </div>
-          <div class="item">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab a nesciunt doloribus. Explicabo minus cumque, molestiae tempore repellendus iusto enim maiores pariatur officiis perferendis excepturi, ut dolore laborum eligendi laudantium placeat aspernatur! Quos dolorum unde officiis labore est animi excepturi neque, provident, inventore nobis expedita facilis aspernatur, nihil in atque?
-          </div>
-          <div class="item">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab a nesciunt doloribus. Explicabo minus cumque, molestiae tempore repellendus iusto enim maiores pariatur officiis perferendis excepturi, ut dolore laborum eligendi laudantium placeat aspernatur! Quos dolorum unde officiis labore est animi excepturi neque, provident, inventore nobis expedita facilis aspernatur, nihil in atque?
-          </div>
-          <div class="item">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab a nesciunt doloribus. Explicabo minus cumque, molestiae tempore repellendus iusto enim maiores pariatur officiis perferendis excepturi, ut dolore laborum eligendi laudantium placeat aspernatur! Quos dolorum unde officiis labore est animi excepturi neque, provident, inventore nobis expedita facilis aspernatur, nihil in atque?
-          </div>
-        </div>
+<div class="wrapper">
+  <div class="sidebar">
+      <h2></h2>
+      <ul>
+          <li ><a href="#home"><i class="fas fa-home"></i>Home</a></li>
+          <li><a href="#"><i class="fas fa-user"></i>Info</a></li>
+          <li><a href="#"><i class="fas fa-address-card"></i> Policy Types</a></li>
+          <li><a href="newpolicy.html"><i class="fas fa-project-diagram"></i>New Policy</a></li>
+          <li><a href="#mypolicy"><i class="fas fa-blog"></i>My Policy</a></li>
+          <li><a href="insurancetypes.html"><i class="fas fa-address-book"></i>Insurance_Types</a></li>
+          <li><a href="#"><i class="fas fa-map-pin"></i>Payment</a></li>
+      </ul> 
+      <div class="social_media">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
     </div>
-    
-
-  
+  </div>
+</div>
