--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
             <a class="nav-link" routerLink="/about" routerLinkActive="active-link">About</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link" routerLink = "/services" routerLinkActive="active-link"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link" routerLink = "/dashboard" routerLinkActive="active-link"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
