--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,214 +1,105 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
 
 *{
   margin: 0;
   padding: 0;
-  list-style: none;
   box-sizing: border-box;
+  list-style: none;
   text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
+  
+}
+
+body{
+   background-color: #f2f3f5;
 }
 
 .wrapper{
-  width: 100%;
-  height: 100%;
-}
-
-
-
-.top_navbar .hamburger{
-  width: 80px;
-  background: #004D40;
-  position: relative;
-  font-size: 28px;
-}
-
-.top_navbar .hamburger .hamburger__inner{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  cursor: pointer;
-  width: 40px;
-  height: 20px;
-}
-
-.top_navbar .hamburger__inner > div{
-  width: 30px;
-  height: 2px;
-  background: #fff;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.top_navbar .hamburger div.two{
-  top: 10px;
-  width: 40px;
-}
-
-.top_navbar .hamburger div.three{
-  top: 20px;
-}
-
-.top_navbar .menu{
-  width: calc(100% - 80px);
-  height: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
+  position: relative;
 }
 
-.top_navbar .menu .logo{
-  color: #004D40;
+.wrapper .sidebar{
+  width: 200px;
+  height: 100%;
+  background: #0D6EFD;
+  padding: 30px 0px;
+  position: fixed;
+}
+
+.wrapper .sidebar h2{
+  color: rgb(12, 1, 1);
   text-transform: uppercase;
-  letter-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
-.top_navbar .menu .right_menu ul{
-  display: flex;
-}
+.wrapper .sidebar ul li{
+  padding: 15px;
+  border-bottom: 1px solid #bdb8d7;
+  border-bottom: 1px solid rgba(0,0,0,0.05);
+  border-top: 1px solid rgba(17, 1, 1, 0.05);
+}    
 
-.top_navbar .menu .right_menu ul li{
-  position: relative;
-}
-
-.top_navbar .menu .right_menu ul li .fas{
-  font-size: 22px;
-  cursor: pointer;
-  color: #004D40;
-}
-
-.top_navbar .menu .right_menu ul li .profile_dd{
-  position: absolute;
-  top: 35px;
-  right: -10px;
-  background: #fff;
-  box-shadow: 0 0 2px rgba(0,0,0,0.5);
-  padding: 10px 0;
-  width: 180px;
-  border-radius: 3px;
-  display: none;
-  user-select: none;
-}
-
-.top_navbar .menu .right_menu ul li .profile_dd.active{
+.wrapper .sidebar ul li a{
+  color: #bdb8d7;
   display: block;
 }
 
-.top_navbar .menu .right_menu ul li .profile_dd .dd_item{
-  padding: 10px;
-  cursor: pointer;
-  color: #004D40;
+.wrapper .sidebar ul li a .fas{
+  width: 25px;
 }
 
-.top_navbar .menu .right_menu ul li .profile_dd .dd_item:hover{
-  background: #E0F2F1;
+.wrapper .sidebar ul li:hover{
+  background-color: #f8f8fa;
 }
-
-.top_navbar .menu .right_menu ul li .profile_dd:before{
-  content: "";
+    
+.wrapper .sidebar ul li:hover a{
+  color: rgb(14, 1, 1);
+}
+ 
+.wrapper .sidebar .social_media{
   position: absolute;
-  top: -20px;
-  right: 10px;
-  border: 10px solid;
-  border-color: transparent transparent #fff transparent;
-}
-
-.main_container .sidebar{
-  position: fixed;
-  top: 60px;
-  left: 0;
-  width: 225px;
-  height: 100%;
-  background: #004D40;
-  transition: all 0.3s ease;
-}
-
-.main_container .sidebar .sidebar__inner{
-  position: relative;
-}
-
-.main_container .sidebar .profile{
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
-  align-items: center;
-  color: #fff;
-  padding: 20px 0;
-  white-space: nowrap;
-  transition: all 0.3s ease;
 }
 
-.main_container .sidebar .profile .img{
-  padding: 0 18px;
+.wrapper .sidebar .social_media a{
+  display: block;
+  width: 40px;
+  background: #594f8d;
+  height: 40px;
+  line-height: 45px;
+  text-align: center;
+  margin: 0 5px;
+  color: #bdb8d7;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
-.main_container .sidebar .profile img{
-   width: 45px;
+.wrapper .main_content{
+  width: 100%;
+  margin-left: 200px;
 }
 
-.main_container .sidebar .profile p:first-child{
-  font-size: 14px;
-  color: #80CBC4;
-  margin-bottom: 3px;
-}
-
-.main_container .container{
-  margin-top: 60px;
-  width: calc(100% - 225px);
-  margin-left: 225px;
-  padding: 30px;
-  transition: all 0.3s ease;
-}
-
-.main_container .sidebar ul li a{
-  color: #fff;
-  font-size: 18px;
-  padding: 20px 30px;
-  white-space: nowrap;
-  display: flex;
-  align-items: center;
-  margin-bottom: 1px;
-  transition: all 0.3s ease;
-}
-
-.main_container .sidebar ul li a .icon{
-  margin-right: 15px;
-  font-size: 28px;
-}
-
-.main_container .sidebar ul li a span{
-  display: inline-block;
-}
-
-.main_container .sidebar ul li a:hover,
-.main_container .sidebar ul li a.active{
-  background: #fff;
-  color: #004D40;
-}
-
-.main_container .container .item{
-  background: #fff;
-  border: 1px solid #E0F2F1;
-  margin-bottom: 30px;
+.wrapper .main_content .header{
   padding: 20px;
-  font-size: 14px;
-  line-height: 22px;
+  background: #fff;
+  color: #717171;
+  border-bottom: 1px solid #e0e4e8;
 }
 
-/* after adding active class */
-.wrapper.active .sidebar{
-  width: 80px;
+.wrapper .main_content .info{
+  margin: 20px;
+  color: #717171;
+  line-height: 25px;
 }
 
-.wrapper.active .sidebar ul li a span.title,
-.wrapper.active .profile_info
-{
-  display: none;
+.wrapper .main_content .info div{
+  margin-bottom: 20px;
 }
 
-.wrapper.active .main_container .container{
-  width: calc(100% - 80px);
-  margin-left: 80px;
-}
-  
+
+
+
