--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,13 +3,13 @@
 <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="./assets/img/pp2.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/img/c1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./assets/img/pp3.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/img/c2.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./assets/img/pp4.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/img/c3.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -20,6 +20,13 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
+  </div>
+
+  <div class="container">
+  
+    <h1>About Us Page</h1>
+    <p>Some text about who we are and what we do.</p>
+    <p>Resize the browser window to see that this page is responsive by the way.</p>
   </div>
 
 
@@ -59,12 +66,7 @@
       </div>
 </div>
   
-<div class="container">
-  
-    <h1>About Us Page</h1>
-    <p>Some text about who we are and what we do.</p>
-    <p>Resize the browser window to see that this page is responsive by the way.</p>
-  </div>
+
   
 
 
