--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,8 +21,155 @@
       <span class="visually-hidden">Next 1</span>
     </button>
   </div>
+  <div class="container">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
 
+html {
+  box-sizing: border-box;
+}
 
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.column {
+  transition:transform 0.5s ;
+  cursor:pointer;
+  border-radius: 5px;
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+.card {
+  background-color: rgb(241, 198, 190);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+}
+.column:hover{
+  transform: translateY(-30px);
+}
+
+.about-section {
+  padding: 50px;
+  text-align: center;
+  background-color: #445ce6;
+  color: white;
+  margin-top: 20px;
+}
+
+.container {
+  padding: 0 16px;
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+.b{
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.button:hover {
+  background-color: #555;
+}
+.a{
+  text-shadow: 2px 2px 2px red;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 500px;
+  font-weight: bold;
+  text-decoration: double;
+}
+
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+</style>
+<body>
+
+<div class="about-section">
+  <h1 style="color:black;"><i><b>About Us Page</b></i></h1>
+  <div class="b">
+  <img src="./assets/img/pp76.jpg" alt="infinity" style="width:60%">
+  </div>
+  <p>Let us Join infinity insurance ...!!</p>
+  <p>Insurance is defined as a contract, which is called a policy, in which an individual or organisation receives financial protection and reimbursement of damages from the insurer or the insurance company. At a very basic level, it is some form of protection from any possible financial losses.
+
+    The basic principle of insurance is that an entity will choose to spend small periodic amounts of money against a possibility of a huge unexpected loss. Basically, all the policyholder pool their risks together. Any loss that they suffer will be paid out of their premiums which they pay.</p>
+</div>
+<div class="a">
+<h2 style="text-align:center"><b><marquee width="50%" height="50px" direction="right">Our Team PUSHPA</marquee></b></h2>
+</div>
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="./assets/img/jpg91.jpg" alt="bhuvana" style="width:22%">
+      <div class="container">
+        <h2>Bhuvaneshwari k</h2>
+        <p class="title"> Team leader</p>
+        <p> let us join infinity insurance  </p>
+        <p>bhuvana12@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src=" ./assets/img/pp71.jpg" alt="shivani" style="width:40%">
+      <div class="container">
+        <h2>shivani</h2>
+        <p class="title">developer</p>
+        <p>let us join infinity insurance</p>
+        <p>shivani234@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <img src="./assets/img/pp81.jpg" alt="guru" style="width:40%">
+      <div class="container">
+        <h2>guru prasad</h2>
+        <p class="title">Designer</p>
+        <p>let us join infinity insurance</p>
+        <p>guru78@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+</div>
+  
+   
 <div class="container my-4">
     <div class="row mb-2">
         <div class="col-md-6">
@@ -59,13 +206,7 @@
       </div>
 </div>
   
-<div class="container">
-  
-    <h1>About Us Page</h1>
-    <p>Some text about who we are and what we do.</p>
-    <p>Resize the browser window to see that this page is responsive by the way.</p>
-  </div>
-  
+
 
 
 
