--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,47 +24,65 @@
 
   <div class="container">
   
-    <h1>About Us Page</h1>
-    <p>Some text about who we are and what we do.</p>
-    <p>Resize the browser window to see that this page is responsive by the way.</p>
+    
+
+<div class="about-section">
+  <div class="b">
+  <img src="./assets/img/pp76.jpg" alt="infinity" style="width:60%">
   </div>
+  <p>Let us Join infinity insurance ...!!</p>
+  <p>Insurance is defined as a contract, which is called a policy, in which an individual or organisation receives financial protection and reimbursement of damages from the insurer or the insurance company. At a very basic level, it is some form of protection from any possible financial losses.
 
-
-<div class="container my-4">
-    <div class="row mb-2">
-        <div class="col-md-6">
-          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-primary">World</strong>
-              <h3 class="mb-0">Featured post</h3>
-              <div class="mb-1 text-muted">Nov 12</div>
-              <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="stretched-link">Continue reading</a>
-              
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-success">Design</strong>
-              <h3 class="mb-0">Post title</h3>
-              <div class="mb-1 text-muted">Nov 11</div>
-              <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="stretched-link">Continue reading</a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
-            </div>
-          </div>
-        </div>
-      </div>
+    The basic principle of insurance is that an entity will choose to spend small periodic amounts of money against a possibility of a huge unexpected loss. Basically, all the policyholder pool their risks together. Any loss that they suffer will be paid out of their premiums which they pay.</p>
 </div>
+
+<div class="a">
+<h2 style="text-align:center"><b><p width="50%" height="50px" direction="right"></p></b></h2>
+
+</div>
+
+<div class="row">
+  <div class="column">
+    <div class="card">
+     
+      <div class="container">
+        <h2>Bhuvaneshwari k</h2>
+        <p class="title"> Team leader</p>
+        <p> let us join infinity insurance  </p>
+        <p>bhuvana12@example.com</p>
+       
+      </div>
+    </div>
+  </div>
+  
+
+  <div class="column">
+    <div class="card">
+     
+      <div class="container">
+        <h2>shivani</h2>
+        <p class="title">developer</p>
+        <p>let us join infinity insurance</p>
+        <p>shivani234@example.com</p>
+       
+      </div>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+     
+      <div class="container">
+        <h2>guru prasad</h2>
+        <p class="title">Designer</p>
+        <p>let us join infinity insurance</p>
+        <p>guru78@example.com</p>
+        
+      </div>
+    </div>
+  </div>
+  </div>
+  
   
 
   
