--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,4 +3,102 @@
     height: 400px;
   }
 
- 
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+  }
+  p 
+  {
+    color: #000;
+    text-align: center;
+    font-weight: bolder;
+    font-size: larger;
+    text-decoration: dashed;
+  }
+  
+  html {
+    box-sizing: border-box;
+  }
+  
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  .column {
+    transition:transform 0.5s ;
+    cursor:pointer;
+    border-radius: 5px;
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+  
+  .card {
+    background-color: #d5d6dd7e;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 2px;
+  }
+  .column:hover{
+    transform: translateY(-30px);
+  }
+  
+  .about-section {
+    padding: 50px;
+    text-align: center;
+    background-color: #d5d6dd7e;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  
+    
+  }
+  
+  .container {
+    padding: 0 16px;
+  }
+  
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .title {
+    color: grey;
+  }
+  
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+  .b{
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  
+  .button:hover {
+    background-color: #555;
+  }
+  .a{
+    text-shadow: 2px 2px 2px red;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 500px;
+    font-weight: bold;
+    text-decoration: double;
+  }
+  
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
