--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,19 +1,18 @@
-<div class="wrapper">
+
   <div class="sidebar">
-      <h2></h2>
+      <h1></h1>
       <ul>
-          <li ><a href="#home"><i class="fas fa-home"></i>Home</a></li>
+      
           <li><a href="#"><i class="fas fa-user"></i>Info</a></li>
           <li><a href="#"><i class="fas fa-address-card"></i> Policy Types</a></li>
-          <li><a href="newpolicy.html"><i class="fas fa-project-diagram"></i>New Policy</a></li>
-          <li><a href="#mypolicy"><i class="fas fa-blog"></i>My Policy</a></li>
-          <li><a href="insurancetypes.html"><i class="fas fa-address-book"></i>Insurance_Types</a></li>
-          <li><a href="#"><i class="fas fa-map-pin"></i>Payment</a></li>
+          <li><a href="#"><i class="fas fa-project-diagram"></i>New Policy</a></li>
+          <li><a href="#"><i class="fas fa-blog"></i>My Policy</a></li>
+         
+          <li><a href="#" ><i class="fa-solid fa-square-poll-horizontal"></i>Payment</a></li>
+          <li> <a href="#" > 
+            <i class="fa fa-cog" ></i> <small>Settings</small> </a> </li>
       </ul> 
-      <div class="social_media">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-    </div>
+     
   </div>
-</div>
+
+
