--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,97 +1,88 @@
 <app-navbar></app-navbar>
 
 <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="10000">
-        <img src="./assets/img/c1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="./assets/img/c2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="./assets/img/c3.jpg" class="d-block w-100" alt="...">
-      </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="10000">
+      <img src="./assets/img/c1.jpg" class="d-block w-100" alt="...">
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous 1</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next 1</span>
-    </button>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="./assets/img/c2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./assets/img/c3.jpg" class="d-block w-100" alt="...">
+    </div>
   </div>
-
-  <div class="container">
-  
-    
-
-<div class="about-section">
-  <div class="b">
-  <img src="./assets/img/pp76.jpg" alt="infinity" style="width:60%">
-  </div>
-  <p>Let us Join infinity insurance ...!!</p>
-  <p>Insurance is defined as a contract, which is called a policy, in which an individual or organisation receives financial protection and reimbursement of damages from the insurer or the insurance company. At a very basic level, it is some form of protection from any possible financial losses.
-
-    The basic principle of insurance is that an entity will choose to spend small periodic amounts of money against a possibility of a huge unexpected loss. Basically, all the policyholder pool their risks together. Any loss that they suffer will be paid out of their premiums which they pay.</p>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous 1</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next 1</span>
+  </button>
 </div>
 
-<div class="a">
-<h2 style="text-align:center"><b><p width="50%" height="50px" direction="right"></p></b></h2>
+<div class="container">
 
-</div>
 
-<div class="row">
-  <div class="column">
-    <div class="card">
-     
-      <div class="container">
-        <h2>Bhuvaneshwari k</h2>
-        <p class="title"> Team leader</p>
-        <p> let us join infinity insurance  </p>
-        <p>bhuvana12@example.com</p>
-       
+
+  <div class="about-section">
+    <div class="b">
+      <img src="./assets/img/pp76.jpg" alt="infinity" style="width:60%">
+    </div>
+    <p>Let us Join infinity insurance ...!!</p>
+    <p>Insurance is defined as a contract, which is called a policy, in which an individual or organisation receives
+      financial protection and reimbursement of damages from the insurer or the insurance company. At a very basic
+      level, it is some form of protection from any possible financial losses.
+
+      The basic principle of insurance is that an entity will choose to spend small periodic amounts of money against a
+      possibility of a huge unexpected loss. Basically, all the policyholder pool their risks together. Any loss that
+      they suffer will be paid out of their premiums which they pay.</p>
+  </div>
+  <div class="a">
+    <h2 style="text-align:center"><b>
+        <p width="50%" height="50px" direction="right"></p>
+      </b></h2>
+  </div>
+
+  <div class="row">
+    <div class="column">
+      <div class="card">
+
+        <div class="container">
+          <h2>Bhuvaneshwari k</h2>
+          <p class="title"> Team leader</p>
+          <p> let us join infinity insurance </p>
+          <p>bhuvana12@example.com</p>
+
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+
+        <div class="container">
+          <h2>shivani</h2>
+          <p class="title">developer</p>
+          <p>let us join infinity insurance</p>
+          <p>shivani234@example.com</p>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+
+        <div class="container">
+          <h2>guru prasad</h2>
+          <p class="title">Designer</p>
+          <p>let us join infinity insurance</p>
+          <p>guru78@example.com</p>
+
+        </div>
       </div>
     </div>
   </div>
   
-
-  <div class="column">
-    <div class="card">
-     
-      <div class="container">
-        <h2>shivani</h2>
-        <p class="title">developer</p>
-        <p>let us join infinity insurance</p>
-        <p>shivani234@example.com</p>
-       
-      </div>
-    </div>
-  </div>
-  
-  <div class="column">
-    <div class="card">
-     
-      <div class="container">
-        <h2>guru prasad</h2>
-        <p class="title">Designer</p>
-        <p>let us join infinity insurance</p>
-        <p>guru78@example.com</p>
-        
-      </div>
-    </div>
-  </div>
-  </div>
-  
-  
-
-  
-
-
-
-  
-  
-
-
-
-<app-footer></app-footer>
+  <app-footer></app-footer>
