--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -21,7 +21,7 @@ body{
 .wrapper .sidebar{
   width: 200px;
   height: 100%;
-  background: #0D6EFD;
+  background: #212529;
   padding: 30px 0px;
   position: fixed;
 }
@@ -92,7 +92,7 @@ body{
 
 .wrapper .main_content .info{
   margin: 20px;
-  color: #717171;
+  color: #71717105;
   line-height: 25px;
 }
 
