--- a/src/app/policydetails/policydetails.component.css
+++ b/src/app/policydetails/policydetails.component.css
@@ -10,18 +10,25 @@ a:hover{
     color: white;
 }
 
+
 @media only screen and (max-width: 1314px) {
     [class="tab-content"] {
-      margin-left: 100px;
+      margin-left: 200px;
     }
   }
 
   @media only screen and (max-width: 1314px) {
     [class="nav nav-tabs"] {
-      margin-left: 100px;
+      margin-left: 150px;
     }
   }
-  .body
+ 
+  .tab-content
   {
-      left: 200px;
+    
+    margin-left: 150px;
   }
+  .nav-item {
+    margin: auto;
+  }
+  
