--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,10 +11,10 @@
             <a class="nav-link"routerLink="/home" routerLinkActive="active-link">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/about" routerLinkActive="active-link">About</a>
+            <a class="nav-link" routerLink="/about" routerLinkActive="active-link"> About</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link" routerLink = "/dashboard" routerLinkActive="active-link"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link" routerLink = "/policy-details" routerLinkActive="active-link"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
