--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,11 +2,11 @@
   <div class="sidebar">
       <h1></h1>
       <ul>
-      
-          <li><a href="#"><i class="fas fa-user"></i>Info</a></li>
-          <li><a href="#"><i class="fas fa-address-card"></i> Policy Types</a></li>
-          <li><a href="#"><i class="fas fa-project-diagram"></i>New Policy</a></li>
-          <li><a href="#"><i class="fas fa-blog"></i>My Policy</a></li>
+      <br>
+          
+          <li><a class="nav-link"routerLink="/policy-details" routerLinkActive="active-link"><i class="fas fa-address-card"></i> Policy Types</a></li>
+          <li><a class="nav-link"routerLink="/new-policy" routerLinkActive="active-link"><i class="fas fa-project-diagram"></i>New Policy</a></li>
+          <li><a class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link"><i class="fas fa-blog"></i>My Policy</a></li>
          
           <li><a href="#" ><i class="fa-solid fa-square-poll-horizontal"></i>Payment</a></li>
           <li> <a href="#" > 
