--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -38,7 +38,7 @@
 
 </div><hr>
 
-<h1 style="text-align:center">Reviews</h1><br/>
+<h1 style="text-align:center">SERVICES</h1><br/>
 
 <div class="container">
 
@@ -51,6 +51,7 @@
               lost luggage, flight cancellations and other losses that a traveller can incur while travelling.Travel Insurance is usaually taken
               from the day of travel till the time the traveller reaches back to their place.
           </p>
+
          <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
@@ -72,7 +73,49 @@
                caused by heavy or prolonged rain,melting snow,coastal storm surges,blocked storm drainage systems or levee dam failure.</p>
           <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
         </div><!-- /.col-lg-4 -->
-      </div><br/><br/><hr>
+      </div><br/><br/>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+      <div class="container">
+
+        <div class="row">
+            <div class="col-lg-4">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/life.jpg"  alt="" height="50%" width="50%">
+      
+              <h2>Life Insurance</h2>
+              <p>Travel insurance is a type insurance that covers different risks while travelling.It covers medical expenses
+                  lost luggage, flight cancellations and other losses that a traveller can incur while travelling.Travel Insurance is usaually taken
+                  from the day of travel till the time the traveller reaches back to their place.
+              </p>
+              
+             <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/car.jpg"  alt="" height="50%" width="50%">
+      
+      
+              <h2>Car Insurance</h2>
+              <p>A health insurance policy extends coverage against medical expenses incurred owing to accidents,illeness or injury.
+                   During this period, if an insured meets with an accidents
+                 the expenses incurred for treatment purposes are borne by the insurance provider.</p>
+              <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/two.webp"  alt="" height="50%" width="50%">
+      
+      
+              <h2>Two Weeler Insurance</h2>
+              <p>Flood insurance is a type of insurance that covers a dwelling for losses sustained by water damage specifically due to flooding
+                   caused by heavy or prolonged rain,melting snow,coastal storm surges,blocked storm drainage systems or levee dam failure.</p>
+              <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
+            </div><!-- /.col-lg-4 -->
+          </div><br/><br/><hr>
+    
 
       
 
