--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
 
   <div class="about-section">
     <div class="b">
-      <img src="./assets/img/pp76.jpg" alt="infinity" style="width:60%">
+      <img src="./assets/img/in.jpeg" alt="infinity" style="width:60%">
     </div>
     <p>Let us Join infinity insurance ...!!</p>
     <p>Insurance is defined as a contract, which is called a policy, in which an individual or organisation receives
