--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="text-align: justify;">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-5">
-              <i class=""></i> QUICK LINKS
+              <i class="bi bi-infinity"></i> QUICK LINKS
             </h6>
             <p>
                 <a routerLink="/home" class="text-reset">Home</a>
