--- a/src/app/new-policy/new-policy.component.html
+++ b/src/app/new-policy/new-policy.component.html
@@ -1,5 +1,17 @@
 <app-sidebar></app-sidebar>
 <app-navbar></app-navbar>
+
+<div class="container">  
+  
+  <ul class="nav nav-pills">  
+    <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li>  
+    <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>  
+    <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li>  
+    
+     
+  </ul> 
+</div>
+
 <section class="vh-100" style="background-color: white" height="100%">  
   <div class="container h-100">  
     <div class="row d-flex justify-content-center align-items-center h-100">  
@@ -7,7 +19,8 @@
         <h1 class="text-white mb-4" style="color: #21bd48;"> Online Job Registration form </h1>  
         <div class="card" style="border-radius: 15px;">  
           <div class="card-body"> 
-              <h3>Registration</h3>
+              <h3>New Policy Registration</h3>
+              
               <div class="row align-items-center pt-4 pb-3">  
                 <div class="col-md-3 ps-5">  
                   <h6 class="mb-0"> Full name </h6>  
