--- a/src/app/policy-details/policy-details.component.css
+++ b/src/app/policy-details/policy-details.component.css
@@ -1,23 +1,28 @@
 a{
-    color:black;
+  color:black;
 }
 .nav-link.active{
-    background-color: 	#df4759;
-    color: white;
+  background-color: 	#df4759;
+  color: white;
 }
 a:hover{
-    background-color: 	#df4759;
-    color: white;
+  background-color: 	#df4759;
+  color: white;
 }
 
 @media only screen and (max-width: 1314px) {
-    [class="tab-content"] {
-      margin-left: 100px;
-    }
+  [class="tab-content"] {
+    margin-left: 100px;
   }
+}
 
-  @media only screen and (max-width: 1314px) {
-    [class="nav nav-tabs"] {
-      margin-left: 100px;
-    }
+@media only screen and (max-width: 1314px) {
+  [class="nav nav-tabs"] {
+    margin-left: 100px;
   }
+}
+hr.new1
+{
+border: 1px solid red;
+border-radius: 10px;
+}
